--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}    
+        
+    - name: set lower case repo owner name
+      env:
+        OWNER: '${{ github.repository_owner }}'  
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}  
+        
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag moonshoot:${{ github.sha }}
+
+    - name: Push Docker image to GitHub Container Registry
+      run: |
+          docker tag moonshoot:${{ github.sha }} ghcr.io/${{ env.OWNER_LC }}/moonshoot:${{ github.sha }}
+          docker push ghcr.io/${{ env.OWNER_LC }}/moonshoot:${{ github.sha }}
